# telegram-ai-agent

./: .env.example  .gitignore  .gitkeep  .gitleaks.toml  .trivyignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  renovate.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260515_0001_baseline_initial_schema.py  20260516_0002_auth_user_columns.py  20260516_0003_payment_idempotency.py  20260516_0004_video_jobs.py  20260516_0005_chat_history.py  20260516_0006_daily_bonus_claims.py  20260516_0007_admin_audit_logs.py  20260516_0008_broadcasts.py  20260516_0009_admin_content.py  20260516_0010_account_deletion_requests.py  20260607_0011_token_usage_partition_safety.py  20260607_0012_account_deletion_failure_reason.py  20260611_0013_user_totp_replay_timecode.py  20260611_0014_drop_redundant_user_indexes.py  20260612_0015_admin_refresh_sessions.py  20260622_0016_admin_setting_fk.py  20260622_0016_admin_settings_updated_by_fk.py  20260622_0017_chat_message_user_guard.py  20260622_0018_broadcast_check_constraints.py
backend/app/: __init__.py  main.py
backend/app/api/: rate_limit.py
backend/app/auth/: __init__.py  admin_access.py  dependencies.py  jwt.py  rbac.py  telegram.py  totp.py
backend/app/bot/: __init__.py  client.py  commands.py  dispatcher.py  fsm.py  handlers.py  keyboards.py  rate_limit.py
backend/app/core/: alembic_autogenerate.py  client_ip.py  config.py  database.py  log_scrubbing.py  logging.py  metrics.py  redis.py  sentry.py
backend/app/models/: __init__.py  account_deletion.py  admin_audit_log.py  admin_refresh_session.py  admin_setting.py  base.py  broadcast.py  chat_history.py  daily_analytics.py  daily_bonus_claim.py  faq_item.py  prompt_template.py  subscription.py  token_usage_log.py  transaction.py  user.py  (+2 more)
backend/tests/: conftest.py  test_account_deletion_service.py  test_account_deletion_worker.py  test_admin_analytics_endpoints.py  test_admin_analytics_service.py  test_admin_broadcasts_endpoints.py  test_admin_content_endpoints.py  test_admin_content_service.py  test_admin_pricing_endpoints.py  test_admin_refresh_sessions.py  test_admin_refresh_sessions_worker.py  test_admin_system_endpoints.py  test_admin_system_service.py  test_admin_users_endpoints.py  test_admin_users_service.py  test_age_verification_docs.py  test_alembic_autogenerate.py  test_api_rate_limit.py  test_app.py  test_auth_admin_login.py  test_auth_endpoints.py  test_auth_jwt.py  test_auth_rbac.py  test_auth_telegram.py  test_auth_totp.py  test_background_worker_deployment_contract.py  test_balance_cache.py  test_bot_client.py  test_bot_dispatcher.py  test_bot_generation_rate_limit.py  test_bot_rate_limit.py  test_bot_webhook.py  test_broadcast_service.py  test_broadcast_worker.py  test_client_ip.py  test_compliance_endpoints.py  test_compose_prod.py  test_composio_client.py  test_composio_usage.py  test_config.py  (+37 more)
(+553 files in other folders)
