[project]
name = "telegram-ai-agent-backend"
version = "0.1.0"
description = "Backend for Telegram AI Agent: FastAPI + SQLAlchemy 2.x async."
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "labtgbot" }]
readme = "README.md"

dependencies = [
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "alembic>=1.13.2,<2",
    "asyncpg>=0.29.0,<1",
    "psycopg[binary]>=3.1.18,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-python-dateutil>=2.9,<3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
