[project]
name = "telegram-ai-agent-backend"
version = "0.1.0"
description = "Backend for Telegram AI Agent: FastAPI + SQLAlchemy 2.x async."
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "labtgbot" }]
readme = "README.md"

dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "structlog>=24.1,<26",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "alembic>=1.13.2,<2",
    "asyncpg>=0.29.0,<1",
    "psycopg[binary]>=3.1.18,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0.1,<2",
    "redis>=5.0.4,<6",
    "httpx>=0.27,<1",
    "python-jose[cryptography]>=3.3,<4",
    "pyotp>=2.9,<3",
    "prometheus-client>=0.20,<1",
    "prometheus-fastapi-instrumentator>=7.0,<8",
    "sentry-sdk[fastapi]>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5.0,<8",
    "ruff>=0.4,<1",
    "black>=24.4,<27",
    "mypy>=1.10,<3",
    "types-python-dateutil>=2.9,<3",
    "asgi-lifespan>=2.1,<3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
